{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 167,
  "lineage": "8c935551-41d4-d88b-d74f-891cdadc0a55",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "aws_alb_listener",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fis-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543226036581:listener/app/fis-lb/3072a48af2a8adb0/b4707ddef3729387",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:543226036581:targetgroup/fis-target-group/d5ebf67ea438940b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543226036581:listener/app/fis-lb/3072a48af2a8adb0/b4707ddef3729387",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:543226036581:loadbalancer/app/fis-lb/3072a48af2a8adb0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "prd_fis-listener"
            },
            "tags_all": {
              "Name": "prd_fis-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_lb.aws_lb",
            "module.vpc.aws_lb_target_group.aws_lb_target_group",
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065ba4ee57ef4ef0e",
            "domain": "vpc",
            "id": "eipalloc-065ba4ee57ef4ef0e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-178-61.compute-1.amazonaws.com",
            "public_ip": "3.225.178.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6fae0fa2a349abf",
            "domain": "vpc",
            "id": "eipalloc-0b6fae0fa2a349abf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-172-73-240.compute-1.amazonaws.com",
            "public_ip": "54.172.73.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:internet-gateway/igw-0393bee12e65642a3",
            "id": "igw-0393bee12e65642a3",
            "owner_id": "543226036581",
            "tags": {
              "Name": "prd_vpc_igw1"
            },
            "tags_all": {
              "Name": "prd_vpc_igw1"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws_lb",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fis-lb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543226036581:loadbalancer/app/fis-lb/3072a48af2a8adb0",
            "arn_suffix": "app/fis-lb/3072a48af2a8adb0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fis-lb-661456971.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:543226036581:loadbalancer/app/fis-lb/3072a48af2a8adb0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fis-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0098febf537af86ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d8083fc5241a1d17"
              },
              {
                "subnet_id": "subnet-0dddb0618a83058ee"
              }
            ],
            "subnets": [
              "subnet-0d8083fc5241a1d17",
              "subnet-0dddb0618a83058ee"
            ],
            "tags": {
              "Name": "fis-lb_prd"
            },
            "tags_all": {
              "Name": "fis-lb_prd"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_lb_target_group",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fis-target-group",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:543226036581:targetgroup/fis-target-group/d5ebf67ea438940b",
            "arn_suffix": "targetgroup/fis-target-group/d5ebf67ea438940b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:543226036581:targetgroup/fis-target-group/d5ebf67ea438940b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "fis-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065ba4ee57ef4ef0e",
            "connectivity_type": "public",
            "id": "nat-0ddd8c69a7d8530da",
            "network_interface_id": "eni-080869c3c8deb029f",
            "private_ip": "10.0.1.212",
            "public_ip": "3.225.178.61",
            "subnet_id": "subnet-0d8083fc5241a1d17",
            "tags": {
              "Name": "prd_vpc_vpc1_pub1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6fae0fa2a349abf",
            "connectivity_type": "public",
            "id": "nat-0aa3326973cb621c7",
            "network_interface_id": "eni-097f954c139e5a48a",
            "private_ip": "10.0.2.90",
            "public_ip": "54.172.73.240",
            "subnet_id": "subnet-0dddb0618a83058ee",
            "tags": {
              "Name": "prd_vpc_vpc1_pub2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "aws_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c29c25683fce9ff11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ddd8c69a7d8530da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c29c25683fce9ff1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_internet_gateway.aws_internet_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-076062735cc674bd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa3326973cb621c7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-076062735cc674bd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_internet_gateway.aws_internet_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0393bee12e65642a3",
            "id": "r-rtb-02a6fb3f0cf460d7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a6fb3f0cf460d7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_internet_gateway.aws_internet_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0393bee12e65642a3",
            "id": "r-rtb-0a06cba2fef8a7b0a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a06cba2fef8a7b0a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_nat_gateway",
            "module.vpc.aws_internet_gateway.aws_internet_gateway",
            "module.vpc.aws_nat_gateway.aws_nat_gateway",
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:route-table/rtb-0c29c25683fce9ff1",
            "id": "rtb-0c29c25683fce9ff1",
            "owner_id": "543226036581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_priv1_ngw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_priv1_ngw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:route-table/rtb-076062735cc674bd4",
            "id": "rtb-076062735cc674bd4",
            "owner_id": "543226036581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_priv2_ngw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_priv2_ngw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:route-table/rtb-02a6fb3f0cf460d7a",
            "id": "rtb-02a6fb3f0cf460d7a",
            "owner_id": "543226036581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_pub1_igw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_pub1_igw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:route-table/rtb-0a06cba2fef8a7b0a",
            "id": "rtb-0a06cba2fef8a7b0a",
            "owner_id": "543226036581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_prd_vpc_vpc1_pub2_igw1"
            },
            "tags_all": {
              "Name": "rt_prd_vpc_vpc1_pub2_igw1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_route_table_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1_ngw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be43ae19ed7c49e1",
            "route_table_id": "rtb-0c29c25683fce9ff1",
            "subnet_id": "subnet-0759b569d35e05470"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2_ngw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e7a334da60a5d12",
            "route_table_id": "rtb-076062735cc674bd4",
            "subnet_id": "subnet-00a9a936e2899bb1d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub1_igw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be9b179fd806e3c5",
            "route_table_id": "rtb-02a6fb3f0cf460d7a",
            "subnet_id": "subnet-0d8083fc5241a1d17"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2_igw1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9145f44ff139040",
            "route_table_id": "rtb-0a06cba2fef8a7b0a",
            "subnet_id": "subnet-0dddb0618a83058ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws_route_table",
            "module.vpc.aws_subnet.aws_subnet",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:security-group/sg-025b4910287c8868d",
            "description": "Allow from Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025b4910287c8868d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "49.204.211.165/32"
                ],
                "description": "My IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "543226036581",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "lb_sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:security-group/sg-0098febf537af86ba",
            "description": "Allow from My IP and Public Subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0098febf537af86ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "49.204.211.165/32"
                ],
                "description": "My IP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "543226036581",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aws_security_group_rule",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_lb_to_ec2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allow_lb_to_ec2",
            "from_port": 0,
            "id": "sgrule-208101244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-025b4910287c8868d",
            "security_group_rule_id": "sgr-057e5dad2779802d2",
            "self": false,
            "source_security_group_id": "sg-0098febf537af86ba",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc_vpc1_priv1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:subnet/subnet-0759b569d35e05470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0759b569d35e05470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543226036581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_priv1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv1"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_priv2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:subnet/subnet-00a9a936e2899bb1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a9a936e2899bb1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543226036581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_priv2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_priv2"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:subnet/subnet-0d8083fc5241a1d17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8083fc5241a1d17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543226036581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_pub1"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub1"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        },
        {
          "index_key": "prd_vpc_vpc1_pub2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:subnet/subnet-0dddb0618a83058ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dddb0618a83058ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "543226036581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prd_vpc_vpc1_pub2"
            },
            "tags_all": {
              "Name": "prd_vpc_vpc1_pub2"
            },
            "vpc_id": "vpc-01b0cb6ad646fdcf9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prd_vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:543226036581:vpc/vpc-01b0cb6ad646fdcf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b7a209bb1ea6429",
            "default_route_table_id": "rtb-0f148318737c4a4a8",
            "default_security_group_id": "sg-09685ee09e860b63c",
            "dhcp_options_id": "dopt-0ac356ffc80095158",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b0cb6ad646fdcf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f148318737c4a4a8",
            "owner_id": "543226036581",
            "tags": {
              "Name": "prd_vpc",
              "env": "prd",
              "purpose": "prd_demo"
            },
            "tags_all": {
              "Name": "prd_vpc",
              "env": "prd",
              "purpose": "prd_demo"
            }
          }
        }
      ]
    }
  ]
}